--- a/core/templates/core/navbar.html
+++ b/core/templates/core/navbar.html
@@ -1,5 +1,6 @@
 {% if not no_nav|default:False %}
-<nav class="bg-color-primary text-white text-lg rounded-r-[47px] z-10">
+
+<nav class="flex bg-color-primary text-white text-lg rounded-r-[47px] z-10" >
   <div class="h-auto w-80 px-8 py-12 z-10">
     <header>
       <div class="pb-1">
@@ -11,25 +12,40 @@
       </div>
     </header>
 
-    <div class="pt-20 pb-52 pl-5">
+    <div class="pt-20 pb-32 pl-5">
       <ul class="font-semibold list-none space-y-4">
         <li>
-          <a href="#"><span class="text">Home</span></a> 
+          <a href="#"><span class=" hover:pl-2 hover:pr-2 hover:text-neutral-400 hover:border-solid hover:border-b-around-color hover:border-b-2 hover:rounded-xl">Home</span></a> 
         </li>
         <li>
-          <a href="#"><span class="text">Comunicados</span></a> 
+          <a href="#"><span class=" hover:pl-2 hover:pr-2 hover:text-neutral-400 hover:border-solid hover:border-b-around-color hover:border-b-2 hover:rounded-xl">Comunicados</span></a> 
         </li>
         <li>
-          <a href="#"><span class="text">Boletim</span></a> 
+          <a href="#"><span class=" hover:pl-2 hover:pr-2 hover:text-neutral-400 hover:border-solid hover:border-b-around-color hover:border-b-2 hover:rounded-xl">Boletim</span></a> 
         </li>
         <li>
-          <a href="#"><span class="text">Calendário</span></a> 
+          <a href="#"><span class=" hover:pl-2 hover:pr-2 hover:text-neutral-400 hover:border-solid hover:border-b-around-color hover:border-b-2 hover:rounded-xl">Diário</span></a> 
         </li>
         <li>
-          <a href="#"><span class="text">Denúncias</span></a> 
+          <div class="relative">
+
+            <button onclick="toggleCalendar()" class="flex items-center hover:pl-2 hover:pr-2 hover:text-neutral-400 hover:border-solid hover:border-b-around-color hover:border-b-2 hover:rounded-xl">
+              Calendário
+
+              <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-5 h-5">
+                <path stroke-linecap="round" stroke-linejoin="round" d="M19.5 8.25l-7.5 7.5-7.5-7.5" />
+              </svg>
+              
+            </button>
+            <div id="calendar-content" class="hidden text-gray-400 mt-3 ml-5 w-40">
+              <a href="#" class="block hover:text-white">Horário de Aulas</a>
+              <a href="#" class="block hover:text-white">Eventos</a>
+              <a href="#" class="block hover:text-white">Provas / Atividades</a>
+            </div>
+          </div>
         </li>
         <li>
-          <a href="#"><span class="text">Diário</span></a> 
+          <a href="#"><span class="hover:pl-2 hover:pr-2 hover:text-neutral-400 hover:border-solid hover:border-b-around-color hover:border-b-2 hover:rounded-xl">Denuncias</span></a> 
         </li>
       </ul>
     </div>
@@ -37,12 +53,14 @@
     <hr class="h-[2px] bg-color-secundary">
 
     <div class="pt-2 font-semibold">
-      <a href="#"><span class="text">Configurações</span></a> 
+      <a href="#"><span class="hover:text-zinc-400">Configurações</span></a> 
     </div>
 
-    <div class="pt-7 font-semibold">
-      <a href="#"><span class="text">Sair</span></a>
+    <div class="pt-5 font-semibold">
+      <a href="#"><span class="hover:text-zinc-400">Sair</span></a>
     </div>
   </div>
 </nav>
+
+<script src="../../static/core/js/page.js"></script>
 {% endif %}
