--- a/core/templates/core/navbar.html
+++ b/core/templates/core/navbar.html
@@ -1,4 +1,5 @@
 {% if not no_nav|default:False %}
+<script src="../../static/core/js/vertical_nav.js"></script>
 
 <nav class="flex bg-color-primary text-white text-lg rounded-r-[47px] z-10" >
   <div class="h-auto w-80 px-8 py-12 z-10">
@@ -12,27 +13,27 @@
       </div>
     </header>
 
-    <div class="pt-20 pb-32 pl-5">
+    <div class="pt-20 pl-5">
       <ul class="font-semibold list-none space-y-4">
         <li>
-          <a href="#"><span class=" hover:pl-2 hover:pr-2 hover:text-neutral-400 hover:border-solid hover:border-b-around-color hover:border-b-2 hover:rounded-xl">Home</span></a> 
+          <a href="#"><span class="hover:transition hover:pl-2 hover:pr-2 hover:text-around-color hover:border-solid hover:border-b-around-color hover:border-b-2 hover:rounded-xl">Home</span></a> 
         </li>
         <li>
-          <a href="#"><span class=" hover:pl-2 hover:pr-2 hover:text-neutral-400 hover:border-solid hover:border-b-around-color hover:border-b-2 hover:rounded-xl">Comunicados</span></a> 
+          <a href="#"><span class="hover:transition hover:pl-2 hover:pr-2 hover:text-around-color hover:border-solid hover:border-b-around-color hover:border-b-2 hover:rounded-xl">Comunicados</span></a> 
         </li>
         <li>
-          <a href="#"><span class=" hover:pl-2 hover:pr-2 hover:text-neutral-400 hover:border-solid hover:border-b-around-color hover:border-b-2 hover:rounded-xl">Boletim</span></a> 
+          <a href="#"><span class="hover:transition hover:pl-2 hover:pr-2 hover:text-around-color hover:border-solid hover:border-b-around-color hover:border-b-2 hover:rounded-xl">Boletim</span></a> 
         </li>
         <li>
-          <a href="#"><span class=" hover:pl-2 hover:pr-2 hover:text-neutral-400 hover:border-solid hover:border-b-around-color hover:border-b-2 hover:rounded-xl">Diário</span></a> 
+          <a href="#"><span class="hover:transition hover:pl-2 hover:pr-2 hover:text-around-color hover:border-solid hover:border-b-around-color hover:border-b-2 hover:rounded-xl">Diário</span></a> 
         </li>
         <li>
           <div class="relative">
 
-            <button onclick="toggleCalendar()" class="flex items-center hover:pl-2 hover:pr-2 hover:text-neutral-400 hover:border-solid hover:border-b-around-color hover:border-b-2 hover:rounded-xl">
+            <button onclick="toggleCalendar()" class="flex items-center hover:transition hover:pl-2 hover:pr-2 hover:text-around-color hover:border-solid hover:border-b-around-color hover:border-b-2 hover:rounded-xl">
               Calendário
 
-              <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-5 h-5">
+              <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" id="arrow_rotate" class="rotate-180 ml-1 transition w-5 h-5 hover:text-around-color">
                 <path stroke-linecap="round" stroke-linejoin="round" d="M19.5 8.25l-7.5 7.5-7.5-7.5" />
               </svg>
               
@@ -55,12 +56,17 @@
     <div class="pt-2 font-semibold">
       <a href="#"><span class="hover:text-zinc-400">Configurações</span></a> 
     </div>
-
-    <div class="pt-5 font-semibold">
-      <a href="#"><span class="hover:text-zinc-400">Sair</span></a>
+    <div class="relative">
+      <div class="flex items-center pt-5 font-semibold">
+        <a href="#"><span class="text-around-color">
+            Sair 
+          <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
+          <path stroke-linecap="round" stroke-linejoin="round" d="M6 18L18 6M6 6l12 12" />
+          </svg>
+        </span></a>
+      </div>
     </div>
   </div>
 </nav>
 
-<script src="../../static/core/js/page.js"></script>
 {% endif %}
