--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -9,7 +9,7 @@
     {% block head %}{% endblock %}
     <script defer src="{% static 'core/dist/js/page.js' %}"></script>
   </head>
-  <body class="bg-slate-100 flex flex-col h-screen dark:bg-gray-800 dark:text-slate-200 relative">
+  <body class="bg-slate-100 flex flex-col h-screen dark:bg-stone-900 dark:text-slate-200 relative">
     {% include "core/messages.html" %}
     {% include "core/navbar.html" with no_nav=no_nav %}
     {% block content %}{% endblock %}
