--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -33,7 +33,7 @@
   </form>
 
   <table class="mt-4 table-auto">
-    <thead class="bg-slate-300 dark:bg-slate-700">
+    <thead>
       <tr>
         <td>RM</td>
         <td>Nome</td>
