--- a/core/templates/core/navbar.html
+++ b/core/templates/core/navbar.html
@@ -1,75 +1,116 @@
-{% if not no_nav|default:False %}
-<script src="../../static/core/js/vertical_nav.js"></script>
+{% load static %} {% if not no_nav|default:False %}
+<nav
+  x-data="{ open: true }"
+  class="flex flex-col bg-color-primary text-white text-lg rounded-r-[50px] z-10 overflow-y-auto pb-6 pl-8 pr-14 relative"
+>
+  <button class="z-10 absolute h-10 w-10 right-7 top-6" @click="open = !open">
+    <svg xmlns="http://www.w3.org/2000/svg" 
+    fill="none" 
+    viewBox="0 0 24 24" 
+    stroke-width="1.5" 
+    stroke="currentColor" 
+    class="w-9 h-9 transition duration-300"
+    :class="open && 'rotate-180'"
+    >
+      <path stroke-linecap="round" stroke-linejoin="round" d="M11.25 4.5l7.5 7.5-7.5 7.5m-6-15l7.5 7.5-7.5 7.5" />
+    </svg>
+    
 
-<nav class="flex-col bg-color-primary text-white text-lg rounded-r-[47px] z-10" >
-  <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
-    <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5" />
-  </svg>
-  
-  <div class="h-auto w-80 px-8 py-12 z-1">
-    <header>
-      <div class="pb-1">
-        <p class="text-2xl font-bold">Menu</p>
-      </div>
+  </button>
 
-      <div>
-        <span class="name">Perfil</span>
-      </div>
-    </header>
+  <!-- TODO: Add some transition -->
+  <div :class="open ? '' : ' hidden'">
+    <div class="h-auto py-8 pb-24">
+      <header>
+        <div class="pb-1 h-16 w-16">
+          <img src="{% static 'core/images/logo.png' %}" />
+        </div>
+        <h2 class="mt-8 font-semibold">Perfil</h2>
+      </header>
 
-    <div class="pt-20 pl-5">
-      <ul class="font-semibold list-none space-y-4">
-        <li>
-          <a href="#"><span class="hover:transition hover:pl-2 hover:pr-2 hover:text-dark-gold hover:border-solid hover:border-b-dark-gold hover:border-b-2 hover:rounded-xl">Home</span></a> 
-        </li>
-        <li>
-          <a href="#"><span class="hover:transition hover:pl-2 hover:pr-2 hover:text-dark-gold hover:border-solid hover:border-b-dark-gold hover:border-b-2 hover:rounded-xl">Comunicados</span></a> 
-        </li>
-        <li>
-          <a href="#"><span class="hover:transition hover:pl-2 hover:pr-2 hover:text-dark-gold hover:border-solid hover:border-b-dark-gold hover:border-b-2 hover:rounded-xl">Boletim</span></a> 
-        </li>
-        <li>
-          <a href="#"><span class="hover:transition hover:pl-2 hover:pr-2 hover:text-dark-gold hover:border-solid hover:border-b-dark-gold hover:border-b-2 hover:rounded-xl">Diário</span></a> 
-        </li>
-        <li>
-          <div class="relative">
-
-            <button onclick="toggleCalendar()" class="flex items-center hover:transition hover:pl-2 hover:pr-2 hover:text-dark-gold hover:border-solid hover:border-b-dark-gold hover:border-b-2 hover:rounded-xl">
-              Calendário
-
-              <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" id="arrow_rotate" class="rotate-180 ml-1 transition w-5 h-5 hover:text-around-color">
-                <path stroke-linecap="round" stroke-linejoin="round" d="M19.5 8.25l-7.5 7.5-7.5-7.5" />
+      <div class="pt-20">
+        <ul
+          class="font-semibold list-none space-y-4"
+          x-data="{ url: document.location.pathname }"
+        >
+          <li>
+            <a href="#" :class="(url == `{% url 'home' %}`) && 'nav-link'"
+              >Home</a
+            >
+          </li>
+          <li>
+            <a href="#1" class="hover:nav-link">Comunicados</a>
+          </li>
+          <li>
+            <a href="#2" class="hover:nav-link">Boletim</a>
+          </li>
+          <li>
+            <a href="#3" class="hover:nav-link">Diário</a>
+          </li>
+          <li class="relative" x-data="{ open: false }">
+            <button
+              @click="open = !open"
+              class="flex items-center hover:nav-link"
+            >
+              <span>Calendário</span>
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                fill="none"
+                viewBox="0 0 24 24"
+                stroke-width="1.5"
+                stroke="currentColor"
+                class="ml-1 transition w-5 h-5 hover:text-around-color"
+                :class="open && 'rotate-180'"
+              >
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  d="M19.5 8.25l-7.5 7.5-7.5-7.5"
+                />
               </svg>
-              
             </button>
-            <div id="calendar-content" class="hidden text-gray-400 mt-3 ml-5 w-40">
+            <div class="text-gray-400 mt-3 ml-5" :class="open || 'hidden'">
               <a href="#" class="block hover:text-white">Horário de Aulas</a>
               <a href="#" class="block hover:text-white">Eventos</a>
               <a href="#" class="block hover:text-white">Provas / Atividades</a>
             </div>
-          </div>
-        </li>
-        <li>
-          <a href="#"><span class="hover:transition hover:pl-2 hover:pr-2 hover:text-dark-gold hover:border-solid hover:border-b-dark-gold hover:border-b-2 hover:rounded-xl">Denuncias</span></a> 
-        </li>
-      </ul>
-    </div>
-  </div>
-
-  <div id="bottom-content" class="flex-col relative align-bottom h-auto w-80 mt-32 px-8 z-2">
-    <hr class="h-[2px] bg-light-gold">
-
-    <div class="pt-2 font-semibold">
-      <a href="#"><span class="hover:text-zinc-400">Configurações</span></a> 
+          </li>
+          <li>
+            <a href="#"><span class="hover:nav-link">Denuncias</span></a>
+          </li>
+        </ul>
+      </div>
     </div>
 
-    <div class="relative">
-        <a href="#"><span class="flex items-center pt-5 font-semibold text-light-gold">
-            Sair 
-          <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
-          <path stroke-linecap="round" stroke-linejoin="round" d="M6 18L18 6M6 6l12 12" />
-          </svg>
-        </span></a>
+    <hr class="h-[2px] bg-light-gold" />
+
+    <div class="flex-col relative align-bottom h-auto mt-14">
+      <div class="pt-2 font-semibold">
+        <a href="#"><span class="hover:text-zinc-400">Configurações</span></a>
+      </div>
+
+      <div class="relative pr-1">
+        <a href="#"
+          ><span
+            class="flex items-center pt-5 font-semibold text-light-gold transition hover:text-xl"
+          >
+            Sair
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              fill="none"
+              viewBox="0 0 24 24"
+              stroke-width="1.5"
+              stroke="currentColor"
+              class="w-6 h-6 transition duration-300 hover:rotate-180"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                d="M6 18L18 6M6 6l12 12"
+              />
+            </svg> </span
+        ></a>
+      </div>
     </div>
   </div>
 </nav>
