--- a/core/static/core/css/enroll.css
+++ b/core/static/core/css/enroll.css
@@ -1,5 +1,5 @@
 main.framed {
-  @apply border border-slate-400 dark:border-slate-600 shadow-md dark:shadow dark:shadow-slate-600;
+  @apply border border-slate-400 shadow-md;
 }
 
 form > section > article > * {
@@ -7,5 +7,5 @@ form > section > article > * {
 }
 
 form section article {
-  @apply px-11 py-9 border border-slate-300 dark:border-slate-600 bg-slate-200 dark:bg-gray-800;
+  @apply border border-slate-300 bg-slate-200 px-11 py-9;
 }
