--- a/core/templates/core/dashboard.html
+++ b/core/templates/core/dashboard.html
@@ -1,30 +1,18 @@
 {% extends 'core/base.html' %} {% load static %} {% block head %}
-<link
-  rel="stylesheet"
-  href="{% static 'management/dist/css/dashboard.css' %}"
-/>
-<script>
-  var urls = {
-    // {% comment %} # TODO: Doesn't work. Use data- attributes
-    // students: "{% url 'management/query/students' %}",
-    // teachers: "{% url 'management/query/teachers' %}",
-    // courses: "{% url 'management/query/courses' %}",
-    // classrooms: "{% url 'management/query/classrooms' %}",
-    // {% endcomment %}
-    students: "{% url 'management/students' %}",
-    teachers: "{% url 'management/students' %}",
-    courses: "{% url 'management/students' %}",
-    classrooms: "{% url 'management/students' %}",
-  };
-</script>
-<script defer src="{% static 'core/js/dashboard.js' %}"></script>
+<script src="{% static 'core/js/dashboard.js' %}"></script>
+<link rel="stylesheet" href="{% static 'core/dist/css/dashboard.css' %}" />
 {% endblock %} {% block content %}
 <main x-data="dashboard">
   <h1 class="m-5 text-2xl font-bold">Dashboard</h1>
   <header id="sectors" class="bg-slate-300 p-5">
     {% csrf_token %}
     <ul id="sectors" class="flex select-none gap-4">
-      <li data-url="{% url 'query/students' %}" data-section="students" @click="reload">Alunos</li>
+      <li
+        @click="reload('students', 'Alunos', `{% url 'query/students' %}`)"
+        x-init="reload('students', 'Alunos', `{% url 'query/students' %}`)"
+      >
+        Alunos
+      </li>
       <li data-section="teachers" @click="reload">Professores</li>
       <li data-section="courses" @click="reload">Cursos</li>
       <li data-section="classrooms" @click="reload">Turmas</li>
@@ -40,6 +28,15 @@
           </template>
         </tr>
       </thead>
+      <tbody>
+        <template x-for="row in rows">
+          <tr>
+            <template x-for="value in row">
+              <td x-text="value"></td>
+            </template>
+          </tr>
+        </template>
+      </tbody>
     </table>
   </section>
 </main>
