--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -5,19 +5,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="{% static 'core/dist/css/main.css' %}" />
-    <link
-      rel="icon"
-      type="image/png"
-      href="{% static 'core/images/logo.png' %}"
-    />
+    <link rel="icon" type="image/png" href="{% static 'core/images/logo.png' %}" />
     {% block head %}{% endblock %}
     <script defer src="{% static 'core/dist/js/page.js' %}"></script>
   </head>
-  <header>{% include "core/header.html" with no_nav=no_nav %}</header>
-  <body
-    class="bg-cover bg-center bg-no-repeat flex flex-col h-screen relative"
-    style="background-image: url('/static/core/images/BGDemzer.png')">
-    <bg-image></bg-image>
+  <body>
+    {% include "core/header.html" with no_nav=no_nav %}
     {% include "core/messages.html" %}
+    {% block content %}{% endblock %}
   </body>
 </html>
