--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -9,7 +9,7 @@
     {% block head %}{% endblock %}
     <script defer src="{% static 'core/dist/js/page.js' %}"></script>
   </head>
-  <body>
+  <body class="relative flex h-screen flex-col bg-slate-200">
     {% include "core/header.html" with no_nav=no_nav %}
     {% include "core/messages.html" %}
     {% block content %}{% endblock %}
