--- a/core/templates/core/login.html
+++ b/core/templates/core/login.html
@@ -24,7 +24,7 @@
   }
 </script>
 {% endblock %} {% block content %}
-<main class="h-full w-full bg-[#054499] p-5 sm:p-9" x-init="onInit()">
+<main class="h-full w-full bg-color-primary py-5 sm:p-11" x-init="onInit()">
   <section
     class="relative h-full w-full justify-between rounded-3xl bg-slate-100 shadow-md shadow-slate-800 sm:flex"
   >
