Added navbar design

--- a/core/static/core/css/main.css
+++ b/core/static/core/css/main.css
@@ -29,20 +29,24 @@
   }
 
   [type="submit"] {
-    @apply cursor-pointer rounded-3xl bg-amber-400 hover:shadow-md;
+    @apply cursor-pointer rounded-3xl bg-color-secondary hover:shadow-md;
   }
 }
 
 hr {
-  @apply my-3;
+  @apply my-3 mx-1;
 }
 
 nav ul li a {
-  @apply flex gap-3 hover:text-color-secondary transition-all duration-300;
+  @apply flex items-center gap-3 px-1 text-gray-200 transition-all duration-300 hover:text-color-secondary;
+}
+
+nav hr {
+  @apply border-[1px] border-color-secondary;
 }
 
 nav svg {
-  @apply h-6 w-6 transition-transform duration-300;
+  @apply h-7 w-7 transition-transform duration-300;
 }
 
 .field {
