--- a/core/templates/core/navbar.html
+++ b/core/templates/core/navbar.html
@@ -1,10 +1,42 @@
 {% load static %}
 <nav
-  class="flex w-64 flex-col justify-between rounded-r-lg bg-color-primary p-5 text-slate-100"
+  class="sticky flex w-80 flex-col justify-between rounded-r-lg bg-color-primary p-5 text-slate-100"
 >
   <div>
     <header>
-      <span>Perfil</span>
+      <div class="flex w-full items-start justify-between">
+        <div class="relative">
+          <img
+            src="{% static '/core/images/profile.jpg' %}"
+            alt="Imagem de {{ user.username.split.0.title }}"
+            class="mb-5 h-20 w-20 rounded-3xl shadow-md"
+          />
+          <span
+            class="absolute -right-3 -top-3 w-8 h-8 text-center rounded-2xl bg-gray-200 p-1 shadow"
+          >
+            🧡
+          </span>
+        </div>
+        <button class="transition-all duration-300 hover:text-color-secondary">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            fill="none"
+            viewBox="0 0 24 24"
+            stroke-width="1.5"
+            stroke="currentColor"
+            class="m-1 h-6 w-6"
+          >
+            <path
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              d="M13.5 4.5L21 12m0 0l-7.5 7.5M21 12H3"
+            />
+          </svg>
+        </button>
+      </div>
+      <span class="text-xl font-bold">
+        {{ user.username.split.0.title }} {{ user.username.split.1.title }}
+      </span>
     </header>
     <hr />
     <ul class="flex flex-col gap-4">
@@ -62,8 +94,8 @@
           <span>Boletim</span>
         </a>
       </li>
-      <li>
-        <a href="">
+      <li x-data="{ open: false }">
+        <a href="#" @click="open = !open">
           <svg
             xmlns="http://www.w3.org/2000/svg"
             fill="none"
@@ -79,6 +111,67 @@
           </svg>
           <span>Calendário</span>
         </a>
+        <ul
+          class="my-2 ml-3 flex origin-top flex-col gap-4 border-l-[3px] border-l-color-primary-dimm py-2 pl-2 transition duration-500"
+        >
+          <li>
+            <a href="">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                fill="none"
+                viewBox="0 0 24 24"
+                stroke-width="1.5"
+                stroke="currentColor"
+                class="h-6 w-6"
+              >
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  d="M12 6v6h4.5m4.5 0a9 9 0 11-18 0 9 9 0 0118 0z"
+                />
+              </svg>
+              <span>Horário de aulas</span>
+            </a>
+          </li>
+          <li>
+            <a href="">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                fill="none"
+                viewBox="0 0 24 24"
+                stroke-width="1.5"
+                stroke="currentColor"
+                class="h-6 w-6"
+              >
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  d="M3 3v1.5M3 21v-6m0 0l2.77-.693a9 9 0 016.208.682l.108.054a9 9 0 006.086.71l3.114-.732a48.524 48.524 0 01-.005-10.499l-3.11.732a9 9 0 01-6.085-.711l-.108-.054a9 9 0 00-6.208-.682L3 4.5M3 15V4.5"
+                />
+              </svg>
+              <span>Eventos</span>
+            </a>
+          </li>
+          <li>
+            <a href="">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                fill="none"
+                viewBox="0 0 24 24"
+                stroke-width="1.5"
+                stroke="currentColor"
+                class="h-6 w-6"
+              >
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  d="M16.862 4.487l1.687-1.688a1.875 1.875 0 112.652 2.652L10.582 16.07a4.5 4.5 0 01-1.897 1.13L6 18l.8-2.685a4.5 4.5 0 011.13-1.897l8.932-8.931zm0 0L19.5 7.125M18 14v4.75A2.25 2.25 0 0115.75 21H5.25A2.25 2.25 0 013 18.75V8.25A2.25 2.25 0 015.25 6H10"
+                />
+              </svg>
+              <span>Provas / atividades</span>
+            </a>
+          </li>
+        </ul>
       </li>
       <li>
         <a href="">
@@ -129,7 +222,7 @@
         </a>
       </li>
       <li>
-        <a href="" class="group">
+        <a href="{% url 'logout' %}" class="group">
           <svg
             xmlns="http://www.w3.org/2000/svg"
             fill="none"
@@ -144,8 +237,8 @@
               d="M6 18L18 6M6 6l12 12"
             />
           </svg>
-          <span>Sair</span></a
-        >
+          <span>Sair</span>
+        </a>
       </li>
     </ul>
   </div>
