--- a/core/templates/core/navbar.html
+++ b/core/templates/core/navbar.html
@@ -1,7 +1,7 @@
 {% load static %}
 <nav
   class="sticky left-0 top-0 flex flex-col justify-between overflow-y-scroll rounded-r-lg bg-color-primary py-5 text-slate-100 transition-all"
-  x-data="{ open: true }"
+  x-data="{ open: false }"
   :class="open ? 'w-80 px-5' : 'w-24 px-1'"
 >
   <div>
