--- a/core/templates/core/enroll.html
+++ b/core/templates/core/enroll.html
@@ -135,7 +135,7 @@
             />
           </div>
           <div class="field flex-1">
-            <label for="txt-rg">RG:</label>
+            <label for="txt-rg">RG</label>
             <input
               type="text"
               name="rg"
@@ -306,7 +306,7 @@
         </div>
         <div class="my-3 flex items-end gap-3">
           <div class="field">
-            <label for="txt-cep">CEP:</label>
+            <label for="txt-cep">CEP</label>
             <input
               type="number"
               name="cep"
@@ -322,7 +322,7 @@
           </button>
 
           <div class="field">
-            <label for="txt-distance">Distância:</label>
+            <label for="txt-distance">Distância</label>
             <input
               type="number"
               name="distance"
@@ -380,7 +380,7 @@
             />
           </div>
           <div class="field">
-            <label for="txt-comp">Complemento:</label>
+            <label for="txt-comp">Complemento</label>
             <input type="text" name="complement" id="txt-comp" size="8" />
           </div>
         </div>
