--- a/core/templates/core/messages.html
+++ b/core/templates/core/messages.html
@@ -16,6 +16,7 @@
     class="relative mb-1 rounded-lg border border-slate-400 bg-slate-200 p-4 pr-6 shadow-md"
     :class="`border-${colors['{{ msg.level_tag }}']}-500 ` + (closed && 'hidden')"
   >
+  <!-- TODO: fix message colors -->
     <span>{{ msg }}</span>
     <button @click="hide()" class="absolute right-2 top-2">
       <svg
