Got everything working

--- a/management/templates/management/students.html
+++ b/management/templates/management/students.html
@@ -110,6 +110,13 @@
     </table>
   </section>
 
+  <p class="my-4">
+    Por motivos de criptografia, o campo de senha será resetado. A
+    nova senha de cada usuário será o primeiro e último nome junto ao ano do seu
+    nascimento. Exemplo: Leonardo da Silva Figueira, 20/4/2001. Senha:
+    LeonardoFigueira2001
+  </p>
+
   <form
     action="{% url 'management/students' %}"
     method="POST"
